updated profile image process

--- a/comm/src/main/resources/application.properties
+++ b/comm/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 #Giphy Api Key
 giphy.api_key=z5jbWHxYgyCD6O62sAu7cWLfBxzvQsrj
+# Saving file in AWS
+spring.resources.static-locations=classpath:/static/images/
+spring.servlet.multipart.location=classpath:/static/images/
+file.upload-dir=/var/springApp/uploads/
