updated all other images

--- a/comm/src/main/resources/application.properties
+++ b/comm/src/main/resources/application.properties
@@ -16,3 +16,5 @@ giphy.api_key=z5jbWHxYgyCD6O62sAu7cWLfBxzvQsrj
 spring.resources.static-locations=classpath:/static/images/
 spring.servlet.multipart.location=classpath:/static/images/
 file.upload-dir=/var/springApp/uploads/
+spring.mvc.favicon.location=classpath:/static/images/CommLogo2.png
+
